Fix contact info on prize page, add text-align: center to all headers

--- a/src/style/master.css
+++ b/src/style/master.css
@@ -67,16 +67,19 @@ nav a:hover {
 h1 {
     font-size: 50px;
     margin: 20px auto;
+    text-align: center;
 }
 
 h2 {
     font-size: 35px;
     text-align: center;
     font-weight: 500;
+    text-align: center;
 }
 
 h3 {
     padding: 10px;
+    text-align: center;
 }
 
 /* OTHER CLASSES */
